--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="/images/favicon.ico" sizes="16x16 32x32 48x48 64x64"
         type="image/vnd.microsoft.icon">
 
-  <title>WP Angular Starter</title>
+  <title>Najdi Igrac</title>
 
   <!-- Concatenated CSS -->
   <link href="/dest/lib.css?rev=40c8a4aaf2878194b5427372047084c9" rel="stylesheet">
@@ -30,10 +30,10 @@
 
 
 <!-- Concatenated libraries -->
-<script src="/dest/lib.js?rev=a3e8e3b637f346b799ceb06682d7ee04"></script>
+<script src="/dest/lib.js?rev=80e7b3293eebf22b3bf65a16c7bf3840"></script>
 <!-- Concatenated application -->
-<script src="/dest/src.js?rev=b309c785f2d0b567b118bb5307497951"></script>
+<script src="/dest/src.js?rev=b51d72d317441b46f311aaa53855cb23"></script>
 <!-- All html templates -->
-<script src="/dest/templates.js?rev=65603e68567c50ed2732b0085ec11611"></script>
+<script src="/dest/templates.js?rev=1693e311813b75b1e70d62450679c5de"></script>
 </body>
 </html>
