--- a/app/login/login.view.html
+++ b/app/login/login.view.html
@@ -14,6 +14,8 @@
                                                    class="form-control" id="password" name="password"
                                                    ng-model="vm.credentials.password"/>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">
+    Login <i class="fa fa-user"></i>
+  </button>
 </form>
 
