added edit and register folders

--- a/app/login/login.view.html
+++ b/app/login/login.view.html
@@ -1,5 +1,5 @@
-<div class="alert alert-danger" ng-show="error">
-  There was a problem logging in. Please try again.
+<div class="alert alert-danger" ng-show="vm.errorMsg">
+  {{vm.errorMsg}}
 </div>
 
 <h2>{{vm.title}}</h2>
