--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 <body ng-app="najdi-igrac-client" ng-cloak class="ng-cloak">
 
 <div ng-include="'app/nav/nav.html'"></div>
-<div ui-view class="main-page container"></div>
+<div ui-view class="container"></div>
 
 
 <!-- Concatenated libraries -->
-<script src="/dest/lib.js?rev=80e7b3293eebf22b3bf65a16c7bf3840"></script>
+<script src="/dest/lib.js?rev=8ed50f7de719c7fae180dfb3b89abeb4"></script>
 <!-- Concatenated application -->
-<script src="/dest/src.js?rev=ccad296afbe2992cd30b26f9c44da360"></script>
+<script src="/dest/src.js?rev=6db26f6274d83ae3b0e17f2830e59a08"></script>
 <!-- All html templates -->
-<script src="/dest/templates.js?rev=1693e311813b75b1e70d62450679c5de"></script>
+<script src="/dest/templates.js?rev=d3d2f79630ade26cfa55dee439d3046f"></script>
 </body>
 </html>
