--- a/app/nav/nav.html
+++ b/app/nav/nav.html
@@ -1,6 +1,7 @@
+<!--
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
+    &lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
               data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -14,7 +15,7 @@
       </a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
+    &lt;!&ndash; Collect the nav links, forms, and other content for toggling &ndash;&gt;
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="LoginController as loginCtrl">
       <ul class="nav navbar-nav">
         <li>
@@ -35,6 +36,106 @@
       </ul>
 
 
+    </div>&lt;!&ndash; /.navbar-collapse &ndash;&gt;
+  </div>&lt;!&ndash; /.container-fluid &ndash;&gt;
+</nav>
+
+
+
+-->
+
+<!--
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    &lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+              data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#/">
+        Home
+      </a>
+    </div>
+
+    &lt;!&ndash; Collect the nav links, forms, and other content for toggling &ndash;&gt;
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="LoginController as loginCtrl">
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="#/user">
+            User
+            <span class="glyphicon glyphicon-remove"></span>
+          </a>
+        </li>
+        <li ng-show="!loginCtrl.isLoggedIn()">
+          <a href="#/login">
+            Login
+          </a>
+        </li>
+        <li ng-show="loginCtrl.isLoggedIn()">
+          <a href="" ng-click="loginCtrl.logout()">
+            Logout
+          </a>
+        </li>
+      </ul>
+
+
+    </div>&lt;!&ndash; /.navbar-collapse &ndash;&gt;
+  </div>&lt;!&ndash; /.container-fluid &ndash;&gt;
+</nav>
+-->
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#/"><span class="glyphicon glyphicon-globe"></span> Најди играч</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="LoginController as loginCtrl">
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="#/events">Events</a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li ng-show="!loginCtrl.isLoggedIn()">
+          <a href="#/register">Register</a>
+        </li>
+        <li ng-show="!loginCtrl.isLoggedIn()">
+          <a href="#/login">Login</a>
+        </li>
+        <li class="dropdown" ng-show="loginCtrl.isLoggedIn()">
+          <a class="dropdown-toggle"
+             data-toggle="dropdown" role="button"
+             aria-haspopup="true" aria-expanded="false">
+            <span class="glyphicon glyphicon-user"></span>
+            {{loginCtrl.getLoggedInUser()}}
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a href="#/edit-profile">Edit profile</a>
+            </li>
+            <li>
+              <a href="#/user-profile">User profile</a>
+            </li>
+            <li role="separator" class="divider"></li>
+            <li>
+              <a ng-click="loginCtrl.logout()">Log Out</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
