--- a/app/home-page/home-page.view.html
+++ b/app/home-page/home-page.view.html
@@ -2,31 +2,31 @@
 
 <div class="container-fluid bg-primary gore"  ng-controller="LoginController as loginCtrl">
 
-	<div class="row" >
-		<div class="well slikaLevo" ng-show="!loginCtrl.isLoggedIn()">
-			<h1 class="golemo"><span class="glyphicon glyphicon-globe"></span></h1>
+	<div class="row " style="padding-bottom: 10vh;" >
+		<div class="col-xs-4 col-xs-offset-1" style="margin-top: 10vh;" ng-show="!loginCtrl.isLoggedIn()" >
+      <img class="img-responsive img-rounded center-block" src="../../images/logo300x300.png">
 		</div>
-		<div class="well formaDesno" ng-show="!loginCtrl.isLoggedIn()">
+		<div class="well col-xs-5 col-xs-offset-1"  ng-show="!loginCtrl.isLoggedIn()" style="margin-top: 10vh;height: 300px;">
 			<form name="form" ng-submit="loginCtrl.login()">
       <h3 class="crno">Log In</h3>
 			<div class="input-group">
-				<span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-user"></span></span>
+				<span class="input-group-addon" ><span class="glyphicon glyphicon-user"></span></span>
 				<input type="text" ng-model="loginCtrl.credentials.username" class="form-control" placeholder="Username or e-mail" aria-describedby="basic-addon1">
 			</div>
 			<div class="input-group">
-				<span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-lock"></span></span>
+				<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
 				<input type="password" ng-model="loginCtrl.credentials.password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
 			</div>
-			<div class="btn-group kopce">
-				<button type="button"  class="btn btn-default">Sign Up</button>
-			</div>
 			<div class="btn-group">
+				<a href="#/register" class="btn btn-default">Sign Up</a>
+			</div>
+			<div class="btn-group pull-right">
 				<button type="submit" class="btn btn-primary">Log In</button>
 			</div>
       </form>
 		</div>
-    <div class="text-center" ng-show="loginCtrl.isLoggedIn()" style="padding-top:200px;padding-bottom: 200px;">
-      <h1 style="color: white;">Wellcome!</h1>
+    <div class="text-center" ng-show="loginCtrl.isLoggedIn()" style="margin-top: 25vh;margin-bottom: 25vh;">
+      <h1 style="color: white;">Welcome!</h1>
     </div>
 	</div>
 </div>
@@ -40,7 +40,9 @@
                         <i class="fa fa-power-off fa-stack-1x fa-inverse"></i>
                     </span>
           <h4 class="service-heading">Login</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted">
+            Приклучи се на новата социјална мрежа Најди Играч, каде што барањето на играчи се сведува на само еден клик
+          </p>
         </div>
         <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -48,7 +50,9 @@
                         <i class="fa fa-plus fa-stack-1x fa-inverse"></i>
                     </span>
           <h4 class="service-heading">Join</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted">
+            Најди играчи околу тебе, и заедно со нив помини го слободното време
+          </p>
         </div>
         <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -56,7 +60,9 @@
                         <i class="fa fa-play fa-stack-1x fa-inverse"></i>
                     </span>
           <h4 class="service-heading">Play</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted">
+            Запознај нови пријатели, играј со нив, на места кои до сега не си ги знаел во редовни термини
+          </p>
         </div>
       </div>
 		</div>
@@ -88,9 +94,10 @@
             </div>
 
             <br>
-            <button type="button" ng-show="!vm.isRequestSent(event.id)" ng-click="vm.joinEvent(event.id)" class="btn btn-success pull-right">Join Event</button>
-            <button type="button" ng-show="vm.isRequestSent(event.id)" class="btn btn-default pull-right" disabled>Request Already Sent</button>
-            <button style="margin-left: 30px;" type="button" class="btn btn-info">Details</button>
+            <button type="button" ng-show="vm.isMyEvent(event)" class="btn btn-default pull-right" disabled>This is your event</button>
+            <button type="button" ng-show="!vm.isRequestSent(event.id) && !vm.isMyEvent(event)" ng-click="vm.joinEvent(event.id)" class="btn btn-success pull-right">Join Event</button>
+            <button type="button" ng-show="vm.isRequestSent(event.id) && !vm.isMyEvent(event)" ng-click="vm.cancelRequest(event.id)" class="btn btn-danger pull-right">Cancel participating request</button>
+            <button style="margin-left: 30px;" type="button" class="btn btn-info" data-toggle="modal" data-target="#event-details" ng-click="vm.getEventDetails(event)">Details</button>
           </div>
           <hr>
         </div>
@@ -101,17 +108,62 @@
 <div class="container-fluid najdole">
 	<div class="row">
 		<div class="col-md-12">
-			<h1 class="tekstDole"><a href="#">Ready To Get Started?</a></h1>
-			<!--<ul class="linkovi">
-				<li><a href="#"><img src="img/fb.png"></a></li>
-				<li><a href="#"><img src="img/youtube.png"></a></li>
-				<li><a href="#"><img src="img/linkedin.png"></a></li>
-			</ul>-->
+			<h1 class="tekstDole"><a>Ready To Get Started?</a></h1>
 		</div>
 	</div>
 </div>
-<!--
-<script src="js/wow.min.js"></script>
-<script>
-    new WOW().init();
-</script>-->
+
+<div class="modal fade" id="event-details">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" data-target="#/event-details"><span
+          aria-hidden="true">&times;</span></button>
+        <h2 class="modal-title">{{vm.eventDetails.name}} <br>
+          <small><span class="fa fa-clock-o"></span>
+            {{vm.eventDetails.dateTime.day}}
+            {{vm.eventDetails.dateTime.month}}
+            {{vm.eventDetails.dateTime.year}}
+            {{vm.eventDetails.dateTime.time}}
+          </small>
+        </h2>
+      </div>
+      <div class="modal-body">
+
+        <h4>{{vm.eventDetails.sport}}
+          <span class="fa fa-futbol-o" ng-show="vm.eventDetails.sport == 'FOOTBALL'"></span>
+          <span class="fa fa-dribbble" ng-show="vm.eventDetails.sport == 'BASKETBALL'"></span>
+          <span class="fa fa-dribbble" ng-show="vm.eventDetails.sport == 'VOLLEYBALL'"></span>
+        </h4>
+        <p>
+          <label>Location: </label>
+          {{vm.eventDetails.location.city}}
+          {{vm.eventDetails.location.name}}
+          {{vm.eventDetails.location.street}}
+          {{vm.eventDetails.location.streetNumber}}
+          <br/>
+          <label>Description: </label>&nbsp;<span>{{vm.eventDetails.description}}</span>
+        </p>
+
+
+        <div class="well">
+          <div class="panel-heading">
+            <h3 class="panel-title"><i class="fa fa-user fa-fw"></i>Participants</h3>
+          </div>
+          <div class="panel-body">
+            <div class="list-group">
+              <a class="list-group-item"
+                 ng-repeat="x in vm.eventDetails.participants"
+              >
+                <i class="fa fa-fw fa-user-secret"></i> {{x.userName}}
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div>
