--- a/app/nav/nav.html
+++ b/app/nav/nav.html
@@ -1,92 +1,3 @@
-<!--
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    &lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-              data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#/">
-        Home
-      </a>
-    </div>
-
-    &lt;!&ndash; Collect the nav links, forms, and other content for toggling &ndash;&gt;
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="LoginController as loginCtrl">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="#/user">
-            User
-          </a>
-        </li>
-        <li ng-show="!loginCtrl.isLoggedIn()">
-          <a href="#/login">
-            Login
-          </a>
-        </li>
-        <li ng-show="loginCtrl.isLoggedIn()">
-          <a href="" ng-click="loginCtrl.logout()">
-            Logout
-          </a>
-        </li>
-      </ul>
-
-
-    </div>&lt;!&ndash; /.navbar-collapse &ndash;&gt;
-  </div>&lt;!&ndash; /.container-fluid &ndash;&gt;
-</nav>
-
-
-
--->
-
-<!--
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    &lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-              data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#/">
-        Home
-      </a>
-    </div>
-
-    &lt;!&ndash; Collect the nav links, forms, and other content for toggling &ndash;&gt;
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="LoginController as loginCtrl">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="#/user">
-            User
-            <span class="glyphicon glyphicon-remove"></span>
-          </a>
-        </li>
-        <li ng-show="!loginCtrl.isLoggedIn()">
-          <a href="#/login">
-            Login
-          </a>
-        </li>
-        <li ng-show="loginCtrl.isLoggedIn()">
-          <a href="" ng-click="loginCtrl.logout()">
-            Logout
-          </a>
-        </li>
-      </ul>
-
-
-    </div>&lt;!&ndash; /.navbar-collapse &ndash;&gt;
-  </div>&lt;!&ndash; /.container-fluid &ndash;&gt;
-</nav>
--->
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -97,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#/"><span class="glyphicon glyphicon-globe"></span> Најди играч</a>
+      <a class="navbar-brand" href="#/">Најди играч</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -123,6 +34,9 @@
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
+            <li>
+              <a href="#/notifications">Notifications</a>
+            </li>
             <li>
               <a href="#/edit-profile">Edit profile</a>
             </li>
